# KeydialCommander

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  Makefile  NIXOS.md  README.md  TROUBLESHOOTING.md  diagnose_hid.py  flake.nix  pyproject.toml  test_service_dependency.py
.claude/agents/: driver-engineer.md  gui-architect.md  qa-verifier.md  ux-designer.md
docs/: AUDIT-2026-07-19.md  BRANCHING.md  DEVICE-K20.md  ROADMAP.md  WORKLOG.md
docs/mockups/: mockup-a-deck.html  mockup-b-studio.html  mockup-c-commandgrid.html
docs/superpowers/plans/: 2026-07-19-phase1-driver-hardening.md  2026-07-19-phase1.5-evdev-device-layer.md  2026-07-19-phase2a-commander-backend.md  2026-07-19-phase2b-commander-frontend.md
docs/superpowers/specs/: 2026-07-19-keydial-commander-design.md
examples/: nixos-configuration.nix
packaging/: build.sh  config.yaml.default  install-udev.sh
packaging/arch/: PKGBUILD  README.md  build.sh  install-deps.sh
packaging/debian/: build.sh  changelog  control  copyright  install-deps.sh  rules
packaging/rpm/: build.sh  install-deps.sh
packaging/shell/: commander_shell.py  keydial-commander  keydial-commander.desktop
packaging/systemd/: huion-keydial-mini-user.service
packaging/udev/: 70-huion-keydial-mini.rules
src/huion_keydial_mini/: __init__.py  __main__.py  action_engine.py  api_server.py  config.py  device.py  evdev_source.py  event_bus.py  event_logger.py  input_events.py  input_map.py  input_translator.py  ipc.py  keybind_manager.py  keydialctl.py  keymap.py  main.py  profile_store.py  uinput_handler.py  validation.py
src/huion_keydial_mini/web/: index.html
tests/: README.md  __init__.py  conftest.py  test_action_engine.py  test_action_model.py  test_api_basic.py  test_api_events.py  test_api_profiles.py  test_cli.py  test_combo_config.py  test_combo_keydialctl.py  test_config_io.py  test_daemon_api.py  test_device_evdev.py  test_evdev_source.py  test_event_bus.py  test_input_events.py  test_input_map.py  test_input_translator.py  test_ipc.py  test_keybind_manager.py  test_keymap.py  test_manager_persistence.py  test_packaging_meta.py  test_profile_store.py  test_uinput_lifecycle.py  test_validation.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  codeToKey.ts  deviceLayout.ts  index.css  main.tsx  store.ts  templates.ts  theme.css  theme.ts
web/src/api/: client.ts  queries.ts  types.ts  useEvents.ts
web/src/components/: ActionLibrary.tsx  DeviceStage.tsx  Inspector.tsx  Modal.tsx  ProfileBar.tsx  Settings.tsx  ShortcutCapture.tsx  StatusStrip.tsx
